--- a/src/components/Cast/Cast.module.css
+++ b/src/components/Cast/Cast.module.css
@@ -1,3 +1,48 @@
-/* .list{}
+.container{
+    padding-left: 0;
+    padding: 0 200px;
+    background-color: #F4F4FD;
+}
 
-.img{} */
+.title{
+    font-family: "Roboto", serif;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.72px;
+    text-align: center;
+    text-transform: capitalize;
+    margin: 0;
+    padding: 50px 0;
+}
+
+.list{
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    column-gap: 25px;
+    row-gap: 40px;
+    flex-wrap: wrap;
+    padding: 0;
+}
+
+.item{
+    border-radius: 5px;
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.img{
+    border-radius: 5px;
+    width: 200px;
+    height: 270px;
+}
+
+.name{
+    font-family: "Roboto", serif;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    text-align: center;
+    
+}
