--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,3 +1,29 @@
-/* .nav{}
+.nav{
+    padding: 20px 0;
+    border-radius: 8px;
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 30px;
+    background-color: #F4F4FD;
 
-.list{} */
+}
+
+.list{
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    margin: 0;
+}
+
+.item{
+    cursor: pointer;
+    font-family: "Roboto", serif;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 1.11;
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+}
