--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+a:hover,
+a:focus{
+  color: #404BBF;
+}
