--- a/src/components/MovieDetails/MovieDetails.module.css
+++ b/src/components/MovieDetails/MovieDetails.module.css
@@ -7,29 +7,30 @@
 .cont{
     display: flex;
     flex-direction: row;
-    border: 1px solid grey;
-    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-    padding-bottom: 20px;
+    padding: 50px 0 50px 30px;
 }
 
 .buttonImg{
     display: flex;
     flex-direction: column;
     gap: 20px;
-    padding-left: 30px;
 }
 
 .goBack{
     padding: 10px;
-    background-color: #f0f0f0;
+    background-color: #F4F4FD;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     display: flex;
     align-items: center;
     width: fit-content;
-    height: 30px;
-    margin-top: 10px;
+    height: 20px;
+    font-family: "Roboto", serif;
+    font-weight: 600;
+    font-size: 17px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
 }
 
 .img{
@@ -38,16 +39,68 @@
 }
 
 .details{
-    padding-left: 20px;
+    padding-left: 30px;
+    padding-top: 30px;
 }
 
 .additionalInfo{
-    margin-top: 20px;
-    border: 1px solid #ccc;
+    border-radius: 5px;
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
     width: 100%;
 }
 
 .additionalsTitle{
-    padding-left: 20px;
+    font-family: "Roboto", serif;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.72px;
+    text-align: center;
+    text-transform: capitalize;
+    margin: 0;
+    padding: 30px 0;
+}
+
+.title{
+    font-family: "Roboto", serif;
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 1.11;
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+}
+
+.description{
+    font-family: "Roboto", serif;
+    font-weight: 600;
+    font-size: 23px;
+    line-height: 1.11;
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+}
+
+.describe{
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+}
+
+.itemInfo{
+    list-style: none;
+    font-family: "Roboto", serif;
+    font-weight: 600;
+    font-size: 23px;
+    line-height: 1.11;
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+}
+
+.listInfo{
+    display: flex;
+    gap: 40px;
+    justify-content: center;
+    padding: 0;
+    margin-top: 0;
 }
